<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/img_play">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start">
            <TextView
                android:id="@+id/tv_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/tv_life_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_label"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/tv_life"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/tv_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
        </TableRow>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        >

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/purple"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="20sp"
            android:textColor="@color/black"
          />
        <EditText
            android:id="@+id/et_answer"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/Hint"
            android:background="@color/purple"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/ok"
                android:textColor="@color/purple"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"/>
            <TextView
                android:id="@+id/tv_next"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:text="@string/next"
                android:textColor="@color/purple"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:background="@drawable/button_background"/>
    </LinearLayout>



</LinearLayout>






</LinearLayout>