<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_total_score"
    android:gravity="center">
    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/congratulations"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center" />
    <TextView
        android:id="@+id/tv_total_score"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/your_score"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center" />
    <TextView
        android:id="@+id/tv_score"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/score"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_play_again"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="5dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="10dp"
            />
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="5dp"
            />
    </LinearLayout>

</LinearLayout>